--- a/src/main.scss
+++ b/src/main.scss
@@ -1,10 +1,10 @@
+$--font-path: "~element-theme-chalk/src/fonts";
 $font-family-base: Arial, sans-serif;
 
 @import "~bootstrap/scss/bootstrap.scss";
-@import "~element-ui/lib/theme-chalk/index.css";
+@import "~element-theme-chalk/src/index.scss";
 
-body
-{
+body {
     font-family: $font-family-base;
     font-size: $font-size-base;
     margin: 0;
