--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,16 @@
-@import url("https://fonts.googleapis.com/css?family=Fira+Sans");
+@import url("https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans");
 
-$--font-path: "~element-theme-chalk/src/fonts";
-$font-family-base: Fira Sans, sans-serif;
+$font-family-monospace: Fira Mono, monospace;
+$font-family-sans-serif: Fira Sans, sans-serif;
 
 @import "~bootstrap/scss/bootstrap.scss";
+
+$--font-path: "~element-theme-chalk/src/fonts";
+$--font-size-base: $font-size-base;
+$--font-size-large: $font-size-lg;
+$--font-size-small: $font-size-sm;
+$--size-base: $font-size-base;
+
 @import "~element-theme-chalk/src/index.scss";
 
 body {
