--- a/client/main.scss
+++ b/client/main.scss
@@ -13,10 +13,11 @@ $--size-base: $font-size-base;
 
 @import "~element-theme-chalk/src/index.scss";
 
-body {
+html, body {
     font: {
         family: $font-family-base;
         size: $font-size-base;
     };
+    height: 100%;
     margin: 0;
 }
