--- a/packages/client/src/main.scss
+++ b/packages/client/src/main.scss
@@ -1,25 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans");
 
-$font-family-sans-serif: Fira Sans, sans-serif;
-$font-family-monospace: Fira Mono, monospace;
+@import "./_init.scss";
 
 @import "~bootstrap/scss/bootstrap.scss";
-
-$--font-path: "~element-theme-chalk/src/fonts";
-$--font-size-base: $font-size-base;
-$--font-size-large: $font-size-lg;
-$--font-size-small: $font-size-sm;
-$--size-base: $font-size-base;
-
 @import "~element-theme-chalk/src/index.scss";
 
 html, body {
+    margin: 0 !important;
+    padding: 0 !important;
+    
+    height: 100%;
+    
     font: {
         family: $font-family-base;
         size: $font-size-base;
     };
-    height: 100%;
-    margin: 0;
-    
-    background: $secondary;
 }
